--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ag-grid-community/csv-export": "^32.3.3",
+    "@tanstack/react-query": "^5.62.15",
+    "ag-grid-react": "^32.3.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^7.0.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -29,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.1"
   }
 }
