--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ag-grid-react": "^32.3.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
