--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lenis": "^1.1.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
