--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "flowbite-react": "^0.10.2",
     "gsap": "^3.12.5",
     "lenis": "^1.1.19",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "lucide-react": "^0.471.1",
+    "multiselect-react-dropdown": "^2.0.25",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^7.0.1",
+    "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "zustand": "^5.0.3"
