--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite-react": "^0.10.2",
     "gsap": "^3.12.5",
     "lenis": "^1.1.19",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.471.2",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^19.0.0",
