--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.12.5",
     "lenis": "^1.1.19",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.471.2",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^19.0.0",
